maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:4: error: ')' expected but '<-' found.
  for (x <- 0 to getMondeLargeur()-1:y <- 1 to getMondeHauteur()-1) {
                                       ^ShortestPathMaze:4: error: ';' expected but ')' found.
  for (x <- 0 to getMondeLargeur()-1:y <- 1 to getMondeHauteur()-1) {
                                                                  ^ShortestPathMaze:18: error: ':' expected but ',' found.
def dirMinimale(x,y):Direction {
                 ^ShortestPathMaze:86: error: identifier expected but '}' found.
}
^